--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   dart_ytmusic_api: ^1.0.7
   hexcolor: ^3.0.1
   cached_network_image: ^3.4.1
+  lottie: ^3.1.3
 
 dev_dependencies:
   flutter_test:
