--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   cached_network_image: ^3.4.1
   lottie: ^3.1.3
   overflow_text_animated: ^0.0.6
+  intl: ^0.19.0
 
 dev_dependencies:
   flutter_test:
