--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,8 @@ dependencies:
   lottie: ^3.1.3
   overflow_text_animated: ^0.0.6
   intl: ^0.19.0
+  rxdart: ^0.28.0
+  connectivity_plus: ^6.1.0
 
 dev_dependencies:
   flutter_test:
