--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,7 @@ dependencies:
   intl: ^0.19.0
   rxdart: ^0.28.0
   connectivity_plus: ^6.1.0
+  audio_video_progress_bar: ^2.0.3
 
 dev_dependencies:
   flutter_test:
