--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,6 +47,7 @@ dependencies:
   rxdart: ^0.28.0
   connectivity_plus: ^6.1.0
   audio_video_progress_bar: ^2.0.3
+  just_audio_background: ^0.0.1-beta.13
 
 dev_dependencies:
   flutter_test:
