--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,12 +42,12 @@ dependencies:
   hexcolor: ^3.0.1
   cached_network_image: ^3.4.1
   lottie: ^3.1.3
-  overflow_text_animated: ^0.0.6
   intl: ^0.19.0
   rxdart: ^0.28.0
   connectivity_plus: ^6.1.0
   audio_video_progress_bar: ^2.0.3
   just_audio_background: ^0.0.1-beta.13
+  text_scroll: ^0.2.0
 
 dev_dependencies:
   flutter_test:
