--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,6 +49,7 @@ dependencies:
   just_audio_background: ^0.0.1-beta.13
   text_scroll: ^0.2.0
   buttons_tabbar: ^1.3.14
+  equatable: ^2.0.5
 
 dev_dependencies:
   flutter_test:
