--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,7 +35,8 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
-  youtube_explode_dart: ^2.3.5
+  # youtube_explode_dart: ^2.3.5
+  youtube_explode_dart: ^2.3.6
   just_audio: ^0.9.41
   flutter_bloc: ^8.1.6
   dart_ytmusic_api: ^1.0.7
