--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -51,6 +51,9 @@ dependencies:
   text_scroll: ^0.2.0
   buttons_tabbar: ^1.3.14
   equatable: ^2.0.5
+  firebase_core: ^3.8.0
+  cloud_firestore: ^5.5.0
+  google_sign_in: ^6.2.2
 
 dev_dependencies:
   flutter_test:
