--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -57,6 +57,7 @@ dependencies:
   font_awesome_flutter: ^10.8.0
   # animated_text_kit: ^4.2.2
   google_fonts: ^6.2.1
+  firebase_auth: ^5.3.3
 
 dev_dependencies:
   flutter_test:
