--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -58,6 +58,7 @@ dependencies:
   # animated_text_kit: ^4.2.2
   google_fonts: ^6.2.1
   firebase_auth: ^5.3.3
+  loading_indicator: ^3.1.1
 
 dev_dependencies:
   flutter_test:
