--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -55,10 +55,10 @@ dependencies:
   cloud_firestore: ^5.5.0
   google_sign_in: ^6.2.2
   font_awesome_flutter: ^10.8.0
-  # animated_text_kit: ^4.2.2
   google_fonts: ^6.2.1
   firebase_auth: ^5.3.3
   loading_indicator: ^3.1.1
+  share_plus: ^10.1.2
 
 dev_dependencies:
   flutter_test:
@@ -70,6 +70,16 @@ dev_dependencies:
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
   flutter_lints: ^4.0.0
+  flutter_launcher_icons: "^0.14.1"
+
+flutter_launcher_icons:
+  android: "launcher_icon"
+  ios: true
+  image_path: "assets/icon.png"
+  min_sdk_android: 23 
+  adaptive_icon_background: "#000000"
+  adaptive_icon_foreground: "assets/icon.png"
+
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
