--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -59,6 +59,7 @@ dependencies:
   firebase_auth: ^5.3.3
   loading_indicator: ^3.1.1
   share_plus: ^10.1.2
+  app_links: ^6.3.2
 
 dev_dependencies:
   flutter_test:
