--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,7 +39,7 @@ dependencies:
   # youtube_explode_dart: ^2.3.6
   just_audio: ^0.9.41
   flutter_bloc: ^8.1.6
-  dart_ytmusic_api: ^1.0.7
+  dart_ytmusic_api: ^1.0.8
   hexcolor: ^3.0.1
   cached_network_image: ^3.4.1
   lottie: ^3.1.3
@@ -66,6 +66,11 @@ dependencies:
       url: https://github.com/anandnet/youtube_explode_dart.git
       ref: 1d9ec9baa806705b1d859260eeb389ec28c6b024  
   fluttertoast: ^8.2.12
+  hive_ce: ^2.10.1
+  hive_ce_flutter: ^2.1.0
+  path_provider: ^2.1.5
+  
+  
 
 dev_dependencies:
   flutter_test:
@@ -76,6 +81,8 @@ dev_dependencies:
   # activated in the `analysis_options.yaml` file located at the root of your
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
+  build_runner: ^2.4.13
+  hive_ce_generator: ^1.8.1
   flutter_lints: ^4.0.0
   flutter_launcher_icons: "^0.14.1"
 
