--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -53,7 +53,7 @@ dependencies:
   google_sign_in: ^6.2.2
   font_awesome_flutter: ^10.8.0
   google_fonts: ^6.2.1
-  firebase_auth: ^5.3.3
+  firebase_auth: ^5.5.2
   loading_indicator: ^3.1.1
   share_plus: ^10.1.2
   app_links: ^6.3.2
@@ -69,6 +69,8 @@ dependencies:
   path_provider: ^2.1.5
   http: ^1.3.0
   flutter_cache_manager: ^3.4.1
+  desktop_webview_auth: ^0.0.15
+  just_audio_windows: ^0.2.2
   
 dev_dependencies:
   flutter_test:
