--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -71,6 +71,12 @@ dependencies:
   flutter_cache_manager: ^3.4.1
   desktop_webview_auth: ^0.0.15
   just_audio_windows: ^0.2.2
+  sidebar_with_animation:
+    git:
+      url: https://github.com/anandnet/animated_side_bar.git
+      branch: main
+      ref: b53567a42b4ba3793a3cf00d478bdba0ecce33d7
+
   
 dev_dependencies:
   flutter_test:
