--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,7 +35,9 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
-  just_audio: ^0.9.41
+  # just_audio: ^0.9.41
+  just_audio: ^0.9.46
+
   flutter_bloc: ^8.1.6
   dart_ytmusic_api: ^1.0.8
   hexcolor: ^3.0.1
@@ -76,6 +78,16 @@ dependencies:
       url: https://github.com/anandnet/animated_side_bar.git
       branch: main
       ref: b53567a42b4ba3793a3cf00d478bdba0ecce33d7
+  window_manager: ^0.4.2
+  tray_manager: ^0.2.3
+  smtc_windows: ^0.1.2
+  just_audio_media_kit: ^2.1.0
+  # just_audio_media_kit:
+  #   git:
+  #     url: https://github.com/anandnet/just_audio_media_kit.git
+  #     ref: 06de226da469f5c55dd780b215bcc45a0d6269fb
+  media_kit_libs_windows_audio: any
+
 
   
 dev_dependencies:
