--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -92,6 +92,10 @@ dependencies:
   permission_handler: ^12.0.0+1
   device_info_plus: ^11.4.0
   dio_smart_retry: ^7.0.1
+  audio_session: ^0.2.2
+  youtube_player_flutter: ^9.1.1
+  
+
 
 
   
